# crud_test

./: .env_default  main.py  pyproject.toml
app/: enums.py  models.py  schemas.py  settings.py
core/: __init__.py  context_processors.py  core_crud.py  endpoint_creator.py  enums.py  json_schema.py  router.py  schemas.py  templates.py  types.py  utils.py
core/components/: __init__.py  attribute.py  base.py  class_name.py  components.py  tables.py
core/static/: custom.css  custom.js
core/static/components/: form.js  lookup.js  modal.js  table.js  toast.js
core/templates/: base.html  form.html  teste.html
core/templates/components/: Button.html  Carousel.html  Div.html  Form.html  Input.html  Link.html  Lookup.html  Modal.html  Select.html  Switch.html  Table.html  Text.html  factory.html
core/templates/includes/: add_components.html
core/templates/macros/: macros.html
crud_test/item/: model.py  schemas.py
migrations/: env.py
migrations/versions/: e1d6d484ff2d_criação_inicial.py
