[tool.poetry]
name = "crud-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastcrud = "^0.14.0"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.32"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "fastapi dev main.py"
commit = "git add . && git commit -m '.' && git push"